# telco-demo

lib/: meson.build
lib/ogspfcputil/: meson.build  pfcp_util.c  pfcp_util.h
src/smf/: cdr.c  cdr.h  context.c  meson.build  n4-handler.c  pfcp-path.c
src/upf/: meson.build  pfcp-path.c
